# ChangeLog for dev-libs/jemalloc
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/jemalloc/ChangeLog,v 1.21 2012/08/07 19:36:27 blueness Exp $

  07 Aug 2012; Anthony G. Basile <blueness@gentoo.org> jemalloc-2.2.5.ebuild,
  jemalloc-2.2.5-r1.ebuild, jemalloc-3.0.0.ebuild:
  Keyword ~arm, bug #429708

  05 Aug 2012; Jeroen Roovers <jer@gentoo.org> jemalloc-3.0.0.ebuild:
  Marked ~hppa (bug #429946).

  07 Jun 2012; Brent Baude <ranger@gentoo.org> jemalloc-2.2.5-r1.ebuild:
  Marking jemalloc-2.2.5-r1 ppc for bug 418743

  06 Jun 2012; Jeff Horelick <jdhore@gentoo.org> jemalloc-2.2.5-r1.ebuild:
  marked x86 per bug 418743

  05 Jun 2012; Brent Baude <ranger@gentoo.org> jemalloc-2.2.5-r1.ebuild:
  Marking jemalloc-2.2.5-r1 ppc64 for bug 418743

  01 Jun 2012; Agostino Sarubbo <ago@gentoo.org> jemalloc-2.2.5-r1.ebuild:
  Stable for amd64, wrt bug #418743

*jemalloc-3.0.0 (01 Jun 2012)

  01 Jun 2012; <anarchy@gentoo.org> +jemalloc-3.0.0.ebuild,
  +files/jemalloc-3.0.0-no-pprof.patch,
  +files/jemalloc-3.0.0-strip-optimization.patch,
  +files/jemalloc-3.0.0_fix_html_install.patch:
  Version bump with regards to bug #416243, Thank Johan Bergström for updating
  patches

  21 May 2012; Kacper Kowalik <xarthisius@gentoo.org> jemalloc-2.2.5-r1.ebuild,
  jemalloc-2.2.5.ebuild:
  Add missing inheritance of eutils.eclass

  26 Apr 2012; Tomáš Chvátal <scarabeus@gentoo.org> jemalloc-2.2.5.ebuild:
  Stable on ppc wrt bug#411449.

  09 Apr 2012; Markus Meier <maekke@gentoo.org> jemalloc-2.2.5.ebuild:
  x86 stable, bug #404083

  26 Mar 2012; Brent Baude <ranger@gentoo.org> jemalloc-2.2.5.ebuild:
  Marking jemalloc-2.2.5 ppc64 for bug 398521

*jemalloc-2.2.5-r1 (26 Feb 2012)

  26 Feb 2012; Jory A. Pratt <anarchy@gentoo.org> -jemalloc-2.2.3.ebuild,
  +jemalloc-2.2.5-r1.ebuild, +files/jemalloc-2.2.5_fix_html_install.patch:
  Fix bug #403945 and #398675
