@@ -9,15 +9,20 @@ AUX jemalloc-3.0.0_fix_html_install.patch 333 SHA256 859aa0ca3e04afc0f17a9d4c74e
 AUX jemalloc-strip-optimization.patch 800 SHA256 a14ee193968e87d0d87a8146050dcad5a33042af119070dbfbac7d4eba9923ce SHA512 cff5130387c25bf1e047103eb6c371d96105acd962c62c58bb6bc72f1bfec071f05b7f2cf54170264f38ce7102004e97bc705a6b08f5f398bbc461b17e61e3c9 WHIRLPOOL 6d5d507a876b76a4b76a9e13a60636d7f042e4b0c4de2030d34195fc426f16794a561c09ce0c4d682f92c5fc798cf14abee3585c748538538eff5610fc7c5b95
 DIST jemalloc-2.2.5.tar.bz2 224118 SHA256 efcc9636757bd7f53a0fde084c2988bfe26f2868e435447f2d41ac42c0b3521e SHA512 56a29dc7dca66c41d2934731c4bc756de5b58bf707dc2ebcf8515be400ce25e372af6526035117cad5b1964b9ba040ab7178f4c28c1649e86dcb53c3ec884a9d WHIRLPOOL e88fc56ac9db024483196d62e870fe4981d1d02fbf5e3819da504568cc58c8f246df668bb3dfe70ad2d551671577c18d5e6432e60bb3107296e6faad7cd8595c
 DIST jemalloc-3.0.0.tar.bz2 245192 SHA256 cce16f18dd1dc7a087d37d33ae4ca507b5bcba64dabefa228ba801d1a78e4554 SHA512 631fec886a0fcf04fa3945de49e84bbab3399f59bcf818a77634e60497647da87b3c3c0ed8eb3b9b050958abc98681aed2530adac707bb0e68ec09b20530d74f WHIRLPOOL 0c54174aa70bf28076a92f0a83ab31c4133db01fafaa232708e79f3f68889e286d5324c8e76c48f45462fd6f13f5da9c695f63fdfd6236db2cb5566a2563461e
-EBUILD jemalloc-2.2.5-r1.ebuild 1023 SHA256 e32d60c5a1e1f9ba551e4e9a5a99ecdcf02de3a8af2850de586a4bfec6ddc9cc SHA512 0c87af568670ef3562951d6c140a09e676dc3110573355e6d24e1434502a1572fde1a53f9a54b5d5d56a3e56f6b5fdeb7cb4ffe36db49bafc713a8882f846f15 WHIRLPOOL 1421e2cac4b602b3ac168b67db428bb1c57bc6be09c0dc6b63d4a450014f4573a54eaa795682333b6d5f469936f13168ca57af763932b6de11315d7fe82860ef
-EBUILD jemalloc-2.2.5.ebuild 783 SHA256 d44fa5301827b6ee1e4d4ef4b75f784df6bc0673feee5fd44723b69541a61f44 SHA512 c685c26b2ac9775461264f3f2f8366b91d35a17ff401b096cbf3ec7e547861b6a5404e06eb2d4c6a86b1024d8dbc2c4c2452a43e474163f204b28fd52ca960c0 WHIRLPOOL 3f19eb0db708db53352b2bc4c228bcbabd9c715ebe0d5d4e1b6b466c9ca6ba64d12acfbbf3ee91ab756bb13ede8b8136a60ff456839df86e488450696d4402b6
-EBUILD jemalloc-3.0.0.ebuild 1072 SHA256 6b14a129311a7fd77765c18887e7e79e38b1f72412f4919b2d6f35cb54f49a2e SHA512 7dcf891c8573f848a8cd46636bddac2becd579223e20b0203b9eed572bacff634939e105a701e6829767ef11a6834ca8ff82cac9305c8057e08a231b0858fc7f WHIRLPOOL a9bc148612bb746c552b78e22345a85c7964a3de0f818b88e90a16ed70f94dbfb9c3b1834b2439120690a47358b17d42ae7d626eadf042979013568803eadb0e
-MISC ChangeLog 3532 SHA256 ed964bd4caad4f16a1325e079f324a6a497c55bf850a8bdfafc1165b7ca8550b SHA512 005324ebe390e31955c2a93299a95716bff6e692b00825d1719a6a1923ed7fced3a814ce1b7299cf69b7ddb62f360ff88893486debfea70391ac0d990e8e1572 WHIRLPOOL 095b078a476c3d4f1af27cc79ee0b32080115c65fea77ffcb96da2a6ea32e5dfd80d159ac3490e86c790ac5b53808091ed3dc210a2dda5f285f4b780912cbaae
+DIST jemalloc-3.1.0.tar.bz2 250791 SHA256 83dcd7aa671a9f63406f2201c365260fbbbdf388a6358ceadb4e3f3d5c82b976 SHA512 a6c016ff7d115fd69b8f694a0f6b1e6269cc6cb1b06527bcdf26b6e62ef72b2222eb30f651255a05386f7878687adaeeee814fa8a811d17bfdb20d70bd4d7f1a WHIRLPOOL 402715858c7c301b5568f6a71101f9c712cd0af39daf95670d742359341ce37a7f504e2e892a359e726d98ad69bafa5739d4460187b2c2cda4c3019d4eb1f75e
+EBUILD jemalloc-2.2.5-r1.ebuild 1020 SHA256 d5bc2a7564957d936b5465ed1f3c460a91635e4c8052b70e9442194f4cae156a SHA512 40a06e30ba8b3770e832d8c064a06ccf0c7ce8927157108c499ebdf96789151e99511cb77b9fedb3b3a7edd6166f983b3acd493256de06b461bce885923e5ea9 WHIRLPOOL 7d3d671a19de76042fbeb9f461a167a558dfadad5692fb1789b9303e1dccd1182849e81dbf7fe19f90a0c58a7e9d62bbacf502b093a3fa6382f744d0d0b7062d
+EBUILD jemalloc-3.0.0.ebuild 1069 SHA256 4395c1e7eb96bae69f4e011c25d0854e63f2caf81df3595eb7481a0f9728105f SHA512 c2320c5c04ebd15b1b163784997fca6f2f3a05956fbe93ac9a5ec31d38a7915de955846a009d389a8d1c8f4008dcc60ad07f69d1d8ee71f2d766f7cd8a93b966 WHIRLPOOL b9533f391ce32e6f3530cdf12bf19b50c47de206e5bc0efb7e744da63ce9086e81a19aa2fad36cdc31ed0ad69a18d4bae8602e51fddc8b50ead73534b5602c93
+EBUILD jemalloc-3.1.0.ebuild 1033 SHA256 1bb1e07383282f7a49493ae1f37ef94835d2d9b03383a8e6ffd0e2ca484e6961 SHA512 bef39d6341d7dcad991207a5094287a21df5c9443a3b52f2bd37f75d2cad884e08437230db73c48821ff298da238256177cf4e97f4f59e2eb944454e206d46c9 WHIRLPOOL c0b51481d89d3340f3e1912a9e868496d7668dc4843b277615c9105657ad951926112c42c47113404f6e470c253ac2e3b4cc801195e53613a7c20afdd1b45e41
+MISC ChangeLog 3684 SHA256 8e16f05a93604255cc5b4ec20d7f4ad253e493c591530c781dca814ceca7953f SHA512 1a4ccc431c634f63ac87c4b198dedbc749f22f54f61154152dcaae3af3e6a8d1a8984f77a83572170483221e6bb72083366e890c7fd9e7ed3d1de601c88d2891 WHIRLPOOL f51e88c84199437df1789c111b2c6c425091f908144653bddebd72f7be787fd8db09387629aa76fdccfd66f44bf84542b657ecc4650ac602ff44290dc1de4935
 MISC metadata.xml 356 SHA256 1b1a10ebdd274e8b4c365e29a9a69e4f79d15eb427def15dc12921f97784756b SHA512 e09112a6d68ae05782ae8729516a63f7ef4f188018d1e9701b28d12b4227331424a7e47f0daf01ba99e9d94c2b04bf8889163b3d1acf5bb79d501c429ba04c9e WHIRLPOOL 67661ad3f567c3ca1bd4d0cd4ec41209657309b9e5099a222ad924ae5f84488cea4985006239a9fe96e67f3f28635c680a54195c5bee80352d6a8af2cdfb0ec0
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlAhbkYACgkQl5yvQNBFVTUniQCeMGG+29/XOO8Pr1SHMJliawQm
-0pkAoKGrQYIP8FG69TOKPTqGgEKm4KhP
-=LIff
+iQEcBAEBCAAGBQJQhFCqAAoJEIu/f0CQGSQd0uMH/j6sIhb7C6aFiDBgnGmi9obK
+4HwWRlndaVzcNLP06rvdvMRvAZ2s9CrndwJbv21OkRcUFbsRmpqsEHZFkUlA+EOo
+T7WY5v+y970B5hXX6KLFqH95lLGCymoormA4Z++44Tl4zn8oBOfyJ3ODcUjUBQiH
+hGTs8CABkWg4KIqKcLhaxUSVdzb6uKJ34id4HBUT2FtAFA+EpJG+gItiWjVEFL3T
+fHyX6xCxoFhpEmEq7SHTJ1Ilf+BdL5aatRmYk57HByflywiSaND8zkNXnKHbtFpY
+gcPVxhxdhRLGDVqQlFG4XoYsyJg5Wi8hitjwj5akYTs2sfo/Myg6wCdVH2OziOo=
+=iIHU
 -----END PGP SIGNATURE-----
