@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/jemalloc/jemalloc-2.2.5.ebuild,v 1.7 2012/08/07 19:36:27 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/jemalloc/jemalloc-3.1.0.ebuild,v 1.1 2012/10/21 19:44:32 anarchy Exp $
 
 EAPI=4
 
@@ -12,17 +12,18 @@ SRC_URI="http://www.canonware.com/download/${PN}/${P}.tar.bz2"
 
 LICENSE="BSD"
 SLOT="0"
-KEYWORDS="amd64 ~arm ppc ppc64 x86"
+KEYWORDS="~amd64 ~arm ~hppa ~ppc ~ppc64 ~x86"
 
-IUSE="debug stats"
+IUSE="debug static-libs stats"
 
 DEPEND=""
 RDEPEND=""
 
 src_prepare() {
 	epatch \
-		"${FILESDIR}/${PN}-strip-optimization.patch" \
-		"${FILESDIR}/${PN}-2.2.1-no-pprof.patch"
+		"${FILESDIR}/${PN}-3.0.0-strip-optimization.patch" \
+		"${FILESDIR}/${PN}-3.0.0-no-pprof.patch" \
+		"${FILESDIR}/${PN}-3.0.0_fix_html_install.patch"
 
 	eautoreconf
 }
@@ -32,4 +33,12 @@ src_configure() {
 		--with-jemalloc-prefix=j \
 		$(use_enable debug) \
 		$(use_enable stats)
+}
+
+src_install() {
+	emake DESTDIR="${ED}" install || die
+	dodoc ChangeLog README
+	dohtml doc/jemalloc.html
+
+	use static-libs || find "${ED}" -name '*.a' -exec rm -f {} +
 }
